# QuickUI

./: .gitignore  CMakeLists.txt
cmake/: AddPlugin.cmake  ConfigBuildTree.cmake  ConfigCompiler.cmake  ConfigQT.cmake  Export.h.in  PrintConfig.cmake  quickuiConfig.cmake.in
src/: CMakeLists.txt  Color.cpp  Font.cpp
src/controls/: QuiButton.qml  QuiCheckBox.qml  QuiComboBox.qml  QuiContentDialog.qml  QuiControlBackground.qml  QuiEditor.qml  QuiExpander.qml  QuiFilledButton.qml  QuiFocusRectangle.qml  QuiImage.qml  QuiInfoBadge.qml  QuiItemDelegate.qml  QuiLoader.qml  QuiMenu.qml  QuiMenuItem.qml  QuiPage.qml  QuiPopup.qml  QuiProgressBar.qml  QuiScrollBar.qml  QuiScrollablePage.qml  QuiShadow.qml  QuiSlider.qml  QuiSpinEditor.qml  QuiSplitView.qml  QuiTabButton.qml  QuiTableView.qml  QuiText.qml  QuiTextArea.qml  QuiTextBoxBackground.qml  QuiTextField.qml  QuiTextIcon.qml  QuiTextIconButton.qml  QuiTextInput.qml  QuiToggleSwitch.qml  QuiToolTip.qml  Utils.qml
src/include/: Color.h  Def.h  Font.h  IconsFont.h
src/include/quickui/: Color.h  Def.h  Export.h  Font.h  IconsFont.h  Singleton.h
tests/: CMakeLists.txt  test_Color.cpp  test_Color.h  test_Font.cpp  test_Font.h  test_QmlRegistration.cpp  test_QmlRegistration.h  test_registry.h  test_runner.h  tst_quickui_cpp.cpp  tst_quickui_qml.cpp
tests/qml/: QuiBasicDecorationsTest.qml  QuiButtonIndicatorControlsTest.qml  QuiButtonTest.qml  QuiCheckBoxTest.qml  QuiComboBoxTest.qml  QuiImageTest.qml  QuiInputControlsTest.qml  QuiLayoutContainerControlsTest.qml  QuiNumericScrollControlsTest.qml  QuiPopupMenuControlsTest.qml  QuiPrimitiveControlsTest.qml  QuickUiModuleTest.qml  UtilsTest.qml  tst_main.qml
